--- a/index.css
+++ b/index.css
@@ -100,3 +100,8 @@ img {
     flex-direction: row;
   }
     
+  .listadecontato ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
